--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -35,4 +35,15 @@
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+<style>
+  {% if page.header.text_color %}
+    .page__hero--overlay .page__title,
+    .page__hero--overlay .page__meta,
+    .page__hero--overlay .page__lead,
+    .page__hero--overlay .btn {
+      color: {{page.header.text_color}} !important;
+    }
+  {% endif %}
+</style>
+
 <!-- end custom head snippets -->
