fix jekyll scss load error (added missing ';')

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $indent-var                 : 1.3em;
 $serif                      : Georgia, Times, serif;
 $sans-serif                 : "Lato", Regular;
 $sans-serif-bold            : "Lato-Bold", Bold;
-$sans-serif-nbold           : "Lato-"
+$sans-serif-nbold           : "Lato-";
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
 
 /* sans serif typefaces */
